# appliances_backend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
configs/: default.cfg
include/appliances_backend/: accessories_manager.h  accessory.h  appliance_base.h  appliances_manager.h  backend.h  characteristic.h  factory.h  helios_kwl_modbus_client.h  interface_base.h  interfaces_manager.h  log.h  logging_base.h  manageable_base.h  manager_base.h  mapper.h  modbus_client.h  service.h  variable_managing_base.h
include/appliances_backend/appliances/: helios_kwl.h
include/appliances_backend/appliances/helios_kwl/: helios_kwl.h  helios_kwl_modbus_client.h
include/appliances_backend/appliances/ikea_tradfri/: ikea_tradfri.h  ikea_tradfri_coap_client.h
include/appliances_backend/interfaces/: mqtt.h
include/appliances_backend/interfaces/homebridge/: homebridge_mqtt.h
include/appliances_backend/utilities/: coap_client.h  modbus_client.h  mqtt_client.h
src/: main.cpp
src/appliances_backend/: accessories_manager.cpp  accessory.cpp  appliance_base.cpp  appliances_manager.cpp  backend.cpp  characteristic.cpp  helios_kwl_modbus_client.cpp  interface_base.cpp  interfaces_manager.cpp  log.cpp  logging_base.cpp  manageable_base.cpp  manager_base.cpp  mapper.cpp  modbus_client.cpp  service.cpp  variable_managing_base.cpp
src/appliances_backend/appliances/: helios_kwl.cpp
src/appliances_backend/appliances/helios_kwl/: helios_kwl.cpp  helios_kwl_modbus_client.cpp
src/appliances_backend/appliances/ikea_tradfri/: ikea_tradfri.cpp  ikea_tradfri_coap_client.cpp
src/appliances_backend/interfaces/: mqtt.cpp
src/appliances_backend/interfaces/homebridge/: homebridge_mqtt.cpp
src/appliances_backend/utilities/: coap_client.cpp  modbus_client.cpp  mqtt_client.cpp
